@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2011-10-17 (SVN):
+    * Deleted midstuff.h. Made mid2strm.c and midi_win.c to use the new
+      midifile.h header.
+
+2011-10-17 (SVN):
     * libs/common: Added new midifile.h header for common MIDI constants
       and structures. Information is compiled from widely available open
       sources.
